test: disable security manager for external ES on 8.x