@@ -70,6 +70,7 @@ public class ClusterInitializationTest {
                 .singleNode()
                 .sslEnabled(TEST_CERTIFICATES)
                 .nodeSettings("entitlements.enabled", "false")
+                .jvmArgs("-Djava.security.manager=")
                 .useExternalProcessCluster()
                 .start();
 
