@@ -87,6 +87,7 @@ public class SgctlTest {
                 .singleNode()
                 .sslEnabled(TEST_CERTIFICATES)
                 .nodeSettings("entitlements.enabled", "false")
+                .jvmArgs("-Djava.security.manager=")
                 .useExternalProcessCluster()
                 .start();
 
